@@ -30,12 +30,19 @@
 
 
 """
-HELANAL --- analysis of protein helices
-=======================================
+HELANAL (Deprecated) --- analysis of protein helices
+====================================================
 
 :Author:  Benjamin Hall <benjamin.a.hall@ucl.ac.uk>, Oliver Beckstein, Xavier Deupi
 :Year:    2009, 2011, 2013
 :License: GNU General Public License v2 (or higher)
+
+.. note::
+
+    This module was deprecated in 1.0 and will be removed in 2.0.
+    Please use MDAnalysis.analysis.helix_analysis instead
+    (available in 2.0.0).
+
 
 The :mod:`MDAnalysis.analysis.helanal` module is a Python implementation of the
 HELANAL_ algorithm [Bansal2000]_ in `helanal.f`_, which is also available
@@ -116,9 +123,6 @@ Functions
 .. autofunction:: helanal_main
 
 """
-from __future__ import print_function, division, absolute_import
-from six.moves import range, zip
-
 import os
 
 import numpy as np
@@ -130,6 +134,12 @@ from MDAnalysis.lib import mdamath
 import warnings
 import logging
 logger = logging.getLogger("MDAnalysis.analysis.helanal")
+
+warnings.warn("This module is deprecated as of MDAnalysis version 1.0. "
+              "It will be removed in MDAnalysis version 2.0."
+              "Please use (available in 2.0.0) "
+              "MDAnalysis.analysis.helix_analysis instead.",
+              category=DeprecationWarning)
 
 def center(coordinates):
     """Return the geometric center (centroid) of the coordinates.
@@ -243,7 +253,18 @@ def helanal_trajectory(universe, select="name CA",
 
     .. versionchanged:: 1.0.0
        Changed `selection` keyword to `select`
+
+    .. deprecated:: 1.0.1
+       helanal_trajectory is deprecated and will be removed in 2.0.0.
+       Please use helix_analysis.HELANAL instead (available in 2.0.0).
     """
+
+    warnings.warn("This function is deprecated as of MDAnalysis version 1.0. "
+                  "It will be removed in MDAnalysis version 2.0. Please use "
+                  "MDAnalysis.analysis.helix_analysis.HELANAL instead "
+                  "(available in 2.0.0)",
+                  category=DeprecationWarning)
+
     if ref_axis is None:
         ref_axis = np.array([0., 0., 1.])
     else:
@@ -376,28 +397,28 @@ def helanal_trajectory(universe, select="name CA",
 
         #print out rotations across the helix to a file
         with open(twist_filename, "a") as twist_output:
-            print(frame, end=' ', file=twist_output)
+            print(frame, end='', file=twist_output)
             for loc_twist in twist:
-                print(loc_twist, end=' ', file=twist_output)
+                print(loc_twist, end='', file=twist_output)
             print("", file=twist_output)
 
         with open(bend_filename, "a") as bend_output:
-            print(frame, end=' ', file=bend_output)
+            print(frame, end='', file=bend_output)
             for loc_bend in bending_angles:
-                print(loc_bend, end=' ', file=bend_output)
+                print(loc_bend, end='', file=bend_output)
             print("", file=bend_output)
 
         with open(screw_filename, "a") as rot_output:
-            print(frame, end=' ', file=rot_output)
+            print(frame, end='', file=rot_output)
             for rotation in local_screw_angles:
-                print(rotation, end=' ', file=rot_output)
+                print(rotation, end='', file=rot_output)
             print("", file=rot_output)
 
         with open(tilt_filename, "a") as tilt_output:
-            print(frame, end=' ', file=tilt_output)
+            print(frame, end='', file=tilt_output)
             for tilt in local_helix_axes:
                 print(np.rad2deg(mdamath.angle(tilt, ref_axis)),
-                      end=' ', file=tilt_output)
+                      end='', file=tilt_output)
             print("", file=tilt_output)
 
         with open(fitted_tilt_filename, "a") as tilt_output:
@@ -424,21 +445,21 @@ def helanal_trajectory(universe, select="name CA",
         for row in bending_statistics_matrix:
             for col in row:
                 formatted_angle = "{0:6.1f}".format(col[0])
-                print(formatted_angle, end=' ', file=mat_output)
+                print(formatted_angle, end='', file=mat_output)
             print('', file=mat_output)
 
         print('\nSD', file=mat_output)
         for row in bending_statistics_matrix:
             for col in row:
                 formatted_angle = "{0:6.1f}".format(col[1])
-                print(formatted_angle, end=' ', file=mat_output)
+                print(formatted_angle, end='', file=mat_output)
             print('', file=mat_output)
 
         print("\nABDEV", file=mat_output)
         for row in bending_statistics_matrix:
             for col in row:
                 formatted_angle = "{0:6.1f}".format(col[2])
-                print(formatted_angle, end=' ', file=mat_output)
+                print(formatted_angle, end='', file=mat_output)
             print('', file=mat_output)
 
     logger.info("Height: %g  SD: %g  ABDEV: %g  (Angstroem)", height_mean, height_sd, height_abdev)
@@ -473,18 +494,18 @@ def helanal_trajectory(universe, select="name CA",
         if start is None:
             for item in range(4, len(residue_statistics[0]) + 4):
                 output = "{0:8d}".format(item)
-                print(output, end=' ', file=summary_output)
+                print(output, end='', file=summary_output)
         else:
             for item in range(start + 3, len(residue_statistics[0]) + start + 3):
                 output = "{0:8d}".format(item)
-                print(output, end=' ', file=summary_output)
+                print(output, end='', file=summary_output)
         print('', file=summary_output)
 
         for measure, name in zip(residue_statistics, measure_names):
-            print(name, end=' ', file=summary_output)
+            print(name, end='', file=summary_output)
             for residue in measure:
                 output = "{0:8.1f}".format(residue)
-                print(output, end=' ', file=summary_output)
+                print(output, end='', file=summary_output)
             print('', file=summary_output)
 
 
@@ -581,7 +602,17 @@ def helanal_main(pdbfile, select="name CA", ref_axis=None):
     .. versionchanged:: 1.0.0
        Changed `selection` keyword to `select`
 
+    .. deprecated:: 1.0.1
+       helanal_trajectory is deprecated and will be removed in 2.0.0.
+       Please use helix_analysis.HELANAL instead (available in 2.0.0).
+
     """
+
+    warnings.warn("This function is deprecated as of MDAnalysis version 1.0. "
+                  "It will be removed in MDAnalysis version 2.0. Please use "
+                  "MDAnalysis.analysis.helix_analysis.helix_analysis on "
+                  "a Universe instead (available in 2.0.0).",
+                  category=DeprecationWarning)
 
     universe = MDAnalysis.Universe(pdbfile)
     ca = universe.select_atoms(select)
